<resources>
    <string name="app_name">Relawan Ganti Presiden</string>
    <string name="home_title">Relawan Ganti Presiden</string>
    <string name="daftar_koordinator_title">Daftar Relawan</string>
    <string name="lapor_title">Laporan ke Upline</string>
    <string name="broadcast_title">Broadcast ke Downline</string>
    <string name="input_tps_title">Input Hasil Form C1</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="berita_title">Berita</string>
    <string name="hitung_suara_title">Hitung Suara</string>
    <string name="pesan_masuk_title">Pesan Masuk</string>
    <string name="action_settings">Settings</string>
    <string name="pesan_masuk_broadcast_title">Broadcast Inbox</string>
    <string name="pesan_masuk_laporan_title">Laporan Inbox</string>
    <string name="detail_inbox_laporan_title">Detail Pesan</string>
    <string name="login_title">RELAWAN GANTI PRESIDEN</string>
    <string name="login_title_page">RELAWAN GANTI PRESIDEN</string>
    <string name="no_hp">NO HP</string>
    <string name="user_id">USER ID</string>
    <string name="hint_passsword">Password</string>
    <string name="forgot_pass">Lupa Password ?</string>
    <string name="masuk_login">Masuk</string>
    <string name="login_cr">© Copyright 2018 Relawan Ganti Presiden Team. All rights reserved.</string>
    <string name="build_date">Build 2018100301</string>
    <string name="cp_right">© Copyright 2018 Relawan Ganti Presiden. All rights reserved.</string>
    <string name="font_name">fonts/RobotoRegular.ttf</string>
    <string name="prompt_judul_laporan">Judul Laporan</string>
    <string name="jenis_kejadian">Jenis Kejadian</string>
    <string name="desc_kejadian">Deskripsi Kejadian</string>
    <string name="prompt_judul_broadcast">Judul Pesan</string>
    <string name="desc_isi_pesan">Isi Pesan</string>
    <string name="jenis_broadcast">Jenis Broadcast</string>
    <string name="radio_button_bc_1">Level dan Upline Sama</string>
    <string name="radio_button_bc_2">Downline Langsung</string>
    <string name="radio_button_bc_3">Seluruh Downline</string>
    <string name="btn_kirim">Kirim</string>
    <string name="laporkan">Laporkan</string>
    <string name="radio_button_lapor_1">Pelanggaran Penyelenggara</string>
    <string name="radio_button_lapor_2">Kecurangan Lawan</string>
    <string name="radio_button_lapor_3">Kendala Teknis RGP</string>
    <string name="radio_button_lapor_4">Kendala Non-Teknis RGP</string>
    <string name="radio_button_lapor_5">Lain-Lain</string>
    <string name="list_laporan_inbox_char">A</string>
    <string-array name="penugasan">
        <item>- Penugasan -</item>
        <item>1 </item>
        <item>2 </item>
        <item>3 </item>
        <item>4 </item>
        <item>5 </item>
    </string-array>
    <string name="suara_prasan">JUMLAH SUARA SATU</string>
    <string name="total_suara">TOTAL PEMILIH</string>
    <string name="titik_dua">:</string>
    <string name="nol">0</string>
    <string name="generate_suara_lawan">JUMLAH SUARA DUA</string>
    <string name="btn_generate">Tampilkan</string>
    <string name="min">-</string>
    <string name="plus">+</string>
    <string name="suara_tidak_sah">JUMLAH SUARA TIDAK SAH</string>
    <string name="btn_kirim_hasil">KIRIM HASIL</string>
    <string name="versi_baru_tersedia">Versi Baru Tersedia</string>
    <string name="old_version">Anda menggunakan Aplikasi MEDIA KOMUNIKASI versi lama, silahkan update aplikasi Anda !</string>
    <string name="tentang_kita_playstore">com.fortuna.rgpmobile</string>
</resources>