<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".broadcast.BroadcastActivity"
    tools:showIn="@layout/activity_broadcast">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsPB"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/item_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.fortuna.rgpmobile.view.CustomEditTextRoboto
                        android:id="@+id/txtJudulPesan"
                        style="?android:textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1.00"
                        android:ems="10"
                        android:hint="@string/prompt_judul_broadcast"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/colorBlack"
                        android:textCursorDrawable="@drawable/color_cursor" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/custom_shape_grey"
                android:orientation="vertical">

                <com.fortuna.rgpmobile.view.CustomTextViewRoboto
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/jenis_broadcast"
                    android:textColor="@color/colorBlack" />

                <RadioGroup
                    android:id="@+id/radio_group_bc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/radio_button_bc_1"
                        android:textColor="@color/colorBlack" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/radio_button_bc_2" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/radio_button_bc_3" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.fortuna.rgpmobile.view.CustomEditTextRoboto
                        android:id="@+id/txtIsiPesan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:hint="@string/desc_isi_pesan"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:textColor="@color/colorBlack"
                        android:textCursorDrawable="@drawable/color_cursor" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.fortuna.rgpmobile.button.ButtonPlus
                    android:id="@+id/btnKirim"
                    style="?android:textAppearanceSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1.00"
                    android:background="@drawable/btn_round_rect"
                    android:text="@string/btn_kirim"
                    android:textColor="@color/colorWhite"
                    tools:ignore="InefficientWeight" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>